# Helix-Mind

./: .env  .env.example.v3  .gitignore  README.md  README.v3.md  config.py  mind_server.py  pyproject.toml  requirements.txt
core/: __init__.py  agent_loop.py  amygdala.py  brain.py  config.py  dag_manager.py  gene_lock.py  harness.py  hxr.py  llm_backend.py  memory_manager.py  prompts.py  queue.py  registry.py
knowledge_base/: self.md  social_graph.md
memory_dag/sessions/: 15df50f0.jsonl  21c890b6.jsonl  4382665a.jsonl  4843e673.jsonl  b376bb29.jsonl  c0ffd166.jsonl  c61072c8.jsonl  d1d2297e.jsonl  ee7e16b3.jsonl  sess_20260412_052049.jsonl  sess_20260412_052318.jsonl  sess_20260412_065036.jsonl  sess_20260412_071555.jsonl  sess_20260412_072014.jsonl  sess_20260412_072705.jsonl  sess_20260412_073628.jsonl  sess_20260412_225613.jsonl  sess_20260412_234553.jsonl  sess_20260413_031103.jsonl  sess_20260413_031219.jsonl  sess_20260413_041007.jsonl  sess_20260413_045521.jsonl  sess_20260413_052411.jsonl
mind/: __init__.py  main.py
mind/adapters/: __init__.py  github_wiki.py  wiki_adapter.py
mind/api/: __init__.py  routes.py  search.py  snapshot.py  write.py
mind/core/: __init__.py  config.py  exceptions.py  models.py
mind/index/: __init__.py  fts_index.py  graph_traverse.py  hybrid_retriever.py  vector_index.py
mind/sleep/: __init__.py  pipeline.py  scoring.py
mind/storage/: __init__.py  duckdb_store.py  knowledge_dag.py  memory_dag.py  patch.py
mind/utils/: __init__.py  embedding.py
personas/: dag_thinker.json
scripts/: update_social_graph.sh
(+3 files in other folders)
